syntax = "proto3";
import "google/protobuf/timestamp.proto";

package aligned_wal;

message SegmentHeader {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
  string slot = 3;
}
